--- a/Documents/web-design/first-webpage/index.html
+++ b/Documents/web-design/first-webpage/index.html
@@ -32,6 +32,7 @@
             respect. Our university has bilateral agreements with some universities in Europe, China, America,
             Turkey and Cyprus.</p>
         <p> Visit to official <a href="http://alatoo.edu.kg/#gsc.tab=0">Webpage of Alatoo International University</a> to learn more</p>
+        <p class="header">Welcome student!</p>
         <button id="change-name">Name</button>
     </body>
 </html>
