final cart section

--- a/Documents/web-design/progect-webpage/it_club-main/index.html
+++ b/Documents/web-design/progect-webpage/it_club-main/index.html
@@ -38,6 +38,8 @@
                     elit. Ut elit tellus, luctus nec ullamcorper mattis.</b>
                 </p>
                 <button class="buy_button" ><b><a href="./card.html">card page</a></b></button>
+                <button class="contacts"> <a href="./contact.html">contacts page</a></button>
+                <button class="checkout"><a href="./checkout.html">checkout page</a></button>
             </div>
             
         </div>
