--- a/Documents/web-design/progect-webpage/it_club/card.html
+++ b/Documents/web-design/progect-webpage/it_club/card.html
@@ -22,9 +22,9 @@
         <div id="logo">A</div>
         <ul class ="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Shop</a></li>
+          <li><a href="shop.html">Shop</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul class ="icons">
           <li><a href="#"><img src="img/user.png" alt="user"></a>
