--- a/Documents/web-design/progect-webpage/it_club/product-comparison.html
+++ b/Documents/web-design/progect-webpage/it_club/product-comparison.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <!-- custom styles -->
   <link rel="stylesheet" href="css/product-comparison.css">
+  <link rel="stylesheet" href="css/card.css">
 </head>
 <body>
   <nav>
@@ -22,7 +23,7 @@
         <div id="logo">A</div>
         <ul class ="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Shop</a></li>
+          <li><a href="shop.html">Shop</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
