feat: added structure, styles, and scripts to index.html, style.css, and script.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,360 @@
         </nav>
     </header>
     <!-- Main Content -->
-    <main>
+    <main class="l-main">
+        <!--===== HOME =====-->
+        <section class="home" id="home">
+            <div class="home__container bd-grid">
+                <div class="home__data">
+                    <div class="home__img">
+                        <img src="img/Altynai.png" alt="Altynai">
+                    </div>
+
+                    <h1 class="home__title">Altynai Munduzbaeva</h1>
+                    <span class="home__group">Computer Engineering student</span>
+
+                    <div class="home__social">
+                        <a href="https://github.com/Altynaim6" class="home__social-link"><i
+                                class='bx bxl-github'></i></a>
+                        <a href="https://discord.com/channels/@me" class="home__social-link"><i
+                                class='bx bxl-discord-alt'></i></a>
+                        <a href="https://www.linkedin.com/in/altynai-munduzbaeva-0a0385271/"
+                            class="home__social-link"><i class='bx bxl-linkedin-square'></i></a>
+                    </div>
+                    <a download="" href="#" class="button home__button">Download Resume</a>
+                </div>
+
+            </div>
+        </section>
+
+        <!--===== ABOUT =====-->
+        <section class="about section" id="about">
+            <span class="section-subtitle">My intro</span>
+            <h2 class="section-title">About Me</h2>
+
+            <div class="about__container bd-grid">
+                <div class="about__data">
+                    <p class="about__description">My top priority is my studies in my chosen specialty. I want to excel
+                        in my work. Perhaps then, I can explore and engage in the areas that truly interest me. This
+                        profession offers a wide range of fields, so I can consider choosing one of them in the future.
+                    </p>
+                    <img src="img/Me.jpg" alt="aboutme" class="about__img">
+                </div>
+
+                <div>
+                    <div class="about__information">
+                        <h3 class="about_information-title">Information</h3>
+
+                        <div class="about__information-data">
+                            <i class='bx bx-user about__information-icon'></i>
+                            <span>Altynai Munduzbaeva</span>
+                        </div>
+
+                        <div class="about__information-data">
+                            <i class='bx bx-phone about__information-icon'></i>
+                            <span>+996775280366</span>
+                        </div>
+
+                        <div class="about__information-data">
+                            <i class='bx bx-envelope about__information-icon'></i>
+                            <span>altynai.munduzbaeva@alatoo.edu.kg</span>
+                        </div>
+                    </div>
+
+                    <div class="about__information">
+                        <h3 class="about_information-title">Experience and support</h3>
+
+                        <div class="about__information-data">
+                            <i class='bx bx-medal about__information-icon'></i>
+                            <div>
+                                <span class="about__information-subtitle">2 years COM student</span>
+                                <span class="about__information-subtitle-small">Experience</span>
+                            </div>
+                        </div>
+
+                        <div class="about__information-data">
+                            <i class='bx bx-briefcase about__information-icon'></i>
+                            <div>
+                                <span class="about__information-subtitle">Mini Projects</span>
+                                <span class="about__information-subtitle-small">Completed</span>
+                            </div>
+                        </div>
+
+                        <div class="about__information-data">
+                            <i class='bx bx-support about__information-icon'></i>
+                            <div>
+                                <span class="about__information-subtitle">Support</span>
+                                <span class="about__information-subtitle-small">Offline & Online 24/7</span>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!--===== SKILLS =====-->
+        <section class="skills section" id="skills">
+            <h2 class="section-title">My expertise Area</h2>
+
+            <div class="skills__container bd-grid">
+                <div class="skills__content">
+                    <h3 class="skills_subtitle">Frontend</h3>
+
+                    <div class="skills__data">
+                        <span class="skills__name">Html/css</span>
+                        <span class="skills__number">60%</span>
+                        <span class="skills__bar skills__html"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">JavaScript</span>
+                        <span class="skills__number">10%</span>
+                        <span class="skills__bar skills__js"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">React</span>
+                        <span class="skills__number">5%</span>
+                        <span class="skills__bar skills__react"></span>
+                    </div>
+                </div>
+
+                <div class="skills__content">
+                    <h3 class="skills_subtitle">Backend</h3>
+
+                    <div class="skills__data">
+                        <span class="skills__name">Java</span>
+                        <span class="skills__number">50%</span>
+                        <span class="skills__bar skills__java"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">Python</span>
+                        <span class="skills__number">20%</span>
+                        <span class="skills__bar skills__python"></span>
+                    </div>
+                </div>
+
+                <div class="skills__content">
+                    <h3 class="skills_subtitle">Languages</h3>
+
+                    <div class="skills__data">
+                        <span class="skills__name">Kyrgyz</span>
+                        <span class="skills__number">Native</span>
+                        <span class="skills__bar"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">Russian</span>
+                        <span class="skills__number">Native</span>
+                        <span class="skills__bar"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">English</span>
+                        <span class="skills__number">Intermediate</span>
+                        <span class="skills__bar"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">German</span>
+                        <span class="skills__number">Pre-intermediate</span>
+                        <span class="skills__bar"></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!--===== EDUCATION =====-->
+        <section class="education section">
+            <span class="section-subtitle">Qualification</span>
+            <h2 class="section-title">My Education</h2>
+
+            <div class="education__container bd-grid">
+                <div class="education__content">
+                    <div>
+                        <h3 class="education__year">2011-2022</h3>
+                        <span class="education__university">school #2</span>
+                    </div>
+
+                    <div class="education__time">
+                        <span class="education__rounder"></span>
+                        <span class="education__line"></span>
+                    </div>
+
+                    <div>
+                        <h3 class="education__race">Certificate of graduation</h3>
+                        <span class="education__specialty"> Grade 11</span>
+                    </div>
+                </div>
+
+                <div class="education__content">
+                    <div>
+                        <h3 class="education__year">2022</h3>
+                        <span class="education__university">Ala-Too International University</span>
+                    </div>
+
+                    <div class="education__time">
+                        <span class="education__rounder"></span>
+                        <span class="education__line"></span>
+                    </div>
+
+                    <div>
+                        <h3 class="education__race">In process</h3>
+                        <span class="education__specialty"> Computer Engineering</span>
+                    </div>
+                </div>
+
+                <div class="education__content">
+                    <div>
+                        <h3 class="education__year">2024</h3>
+                        <span class="education__university">Codeinfinity Course</span>
+                    </div>
+
+                    <div class="education__time">
+                        <span class="education__rounder"></span>
+                        <span class="education__line"></span>
+                    </div>
+
+                    <div>
+                        <h3 class="education__race">In process</h3>
+                        <span class="education__specialty"> Java-script</span>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!--===== WORKS =====-->
+        <section class="works section" id="works">
+            <span class="section-subtitle">My portfolio</span>
+            <h2 class="section-title">Recent Works</h2>
+
+            <div class="works__container bd-grid">
+                <div class="works__img">
+                    <img src="img/work1.png" alt="trevel">
+
+                    <div class="works__data">
+                        <a href="https://altynaim6.github.io/nomadLand" class="works__link"><i
+                                class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Work 1</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="works__container bd-grid">
+                <div class="works__img">
+                    <img src="img/work2.png" alt="e-comers">
+
+                    <div class="works__data">
+                        <a href="https://altynaim6.github.io/project/" class="works__link"><i
+                                class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Work 2</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="works__container bd-grid">
+                <div class="works__img">
+                    <img src="img/work3.png" alt="alatoo">
+
+                    <div class="works__data">
+                        <a href="https://ala-too-page-frgegnhf9-altynais-projects-7b99892c.vercel.app"
+                            class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Work 3</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="works__container bd-grid">
+                <div class="works__img">
+                    <img src="img/work4.png" alt="arabrecordings">
+
+                    <div class="works__data">
+                        <a href="https://github.com/alatooitclub/arab_recordings.git" class="works__link"><i
+                                class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Work 4</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="works__container bd-grid">
+                <div class="works__img">
+                    <img src="img/work5.png" alt="aboutmyself">
+
+                    <div class="works__data">
+                        <a href="https://altynaim6.github.io/my-webpage/" class="works__link"><i
+                                class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Work 5</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--===== CONTACT =====-->
+        <section class="contact section" id="contact">
+            <span class="section-subtitle">Contact Me</span>
+            <h2 class="section-title">Get In Touch</h2>
+
+            <div class="contact__container bd-grid">
+                <form action="https://jsonplaceholder.typicode.com/posts" class="contact__form">
+                    <div class="contact__inputs">
+                        <input type="text" placeholder="Name" class="contact__input">
+                        <input type="email" placeholder="Email" class="contact__input">
+                    </div>
+
+                    <input type="email" placeholder="Project" class="contact__input">
+
+                    <textarea name="message" id="message" cols="1" rows="10" placeholder="Message"
+                        class="contact__input"></textarea>
+
+                    <input type="submit" value="Send Message" class="button contact__button">
+                </form>
+
+                <div>
+                    <div class="contact__info">
+                        <h3 class="contact__subtitle">Call Me</h3>
+                        <span class="contact__text">+996775280366</span>
+                        <span class="contact__text">+996701938393</span>
+                    </div>
+
+                    <div class="contact__info">
+                        <h3 class="contact__subtitle">E-mail</h3>
+                        <span class="contact__text">altynaimunduzbaeva@gmail.com</span>
+                        <span class="contact__text">altynai.munduzbaeva@alatoo.edu.kg</span>
+                    </div>
+
+                    <div class="contact__info">
+                        <h3 class="contact__subtitle">Location</h3>
+                        <span class="contact__text">Ankara 8</span>
+                        <span class="contact__text">Bishkek</span>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- FOOTER -->
+        <footer class="footer section">
+            <div class="footer__container bd-grid">
+                <h1 class="footer__title">Altynai</h1>
+                <p class="footer__description">I am Altynai and this is my personal website, feel free to contact me.
+                </p>
+
+                <div class="footer__social">
+                    <a href="https://github.com/Altynaim6" class="footer_github"><i class='bx bxl-github'></i></a>
+                    <a href="https://rs.school/courses/javascript"><img id="rs_logo" src="./img/rs-school-logo.svg"
+                            alt="rs_school"></a>
+                </div>
+
+                <p class="footer__copy">All right reserved by Altynai - 2024 </p>
+            </div>
+        </footer>
     </main>
+    <!-- MAIN JS -->
+    <script src="./js/script.js"></script>
 </body>
+
 </html>
